tests/errors/syn_method12.java
public class syn_method12 {
public static String[] main ( ) 
}
}